# mecanum_robot_simulation

./: CMakeLists.txt  README.md  package.xml
config/: gazeebo_ros_bridge.yaml  mapper_params_online_async.yaml  mecanum_robot_waffle_bridge.yaml  nav2_params.yaml  navigation_launch.py  online_async_launch.py
description/meshes/: back_left_wheel.dae  back_right_wheel.dae  chasis.STL  chasis.dae  front_left_wheel.dae  front_right_wheel.dae
description/urdf/: gazebo.xacro  gazeboCamera.xacro  gazeboDepthCamera.xacro  gazeboIMU.xacro  gazeboLidar.xacro  gazeboTransforms_update.xacro  gazebo_control.xacro  material.xacro  output.urdf  urdf_final.urdf
launch/: localization_launch.py  navigation_launch.py  online_async_launch.py  robot_main.launch.py  robot_state_publisher.launch.py
rviz/: robot_view.rviz
urdf/launch/: gazebo.launch
urdf/urdf/: gazebo.xacro  urdf_final.urdf
urdf_final/config/: joint_names_urdf_final.yaml
urdf_final/launch/: display.launch
urdf_final/meshes/: back_right_wheel.STL
urdf_final/urdf/: urdf_final.csv  urdf_final.urdf
world/: mecanum_world.sdf  my_world.world
